# lesson-5-multimodal-input-processing-beyond-ocr-and-text-luobochuanqi

./: .env.example  .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: classroom.yml
data/: sales.csv
output/: report.md
src/multimodal_processor/: __init__.py  audio.py  csv_parser.py  main.py  report.py  vision.py
tests/: grade.py  test_processor.py
