[project]
name = "multimodal-processor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pandas",
    "python-dotenv",
    "pillow",
    "faster-whisper",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multimodal_processor"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
